--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,20 @@
 html, body {
     margin: 0;
-    height: 100%;
-    min-height: 100%;
+    height: 100vh;
+    /*min-height: 100%;*/
 
 }
 
 body {
     display: flex;
     flex-direction: column;
+    font-size: 3.2vw;
 }
 
-header,
-footer {
+header {
     flex: none;
 }
+
 
 main {
     overflow-y: scroll;
@@ -23,6 +24,26 @@ main {
 
 .pic {
     flex: none;
+}
+
+._container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.item-grow {
+    flex-grow: 1;
+}
+
+.item {
+    margin: 2px;
+}
+
+._change_character {
+    max-height: 120px;
+    max-width: 120px;
 }
 
 #messages {
